--- a/package.json
+++ b/package.json
@@ -15,10 +15,7 @@
 	"type": "module",
 	"main": "./lib/index.js",
 	"files": [
-		"lib/",
-		"package.json",
-		"LICENSE.md",
-		"README.md"
+		"lib/"
 	],
 	"scripts": {
 		"build": "tsc -b tsconfig.build.json",
@@ -35,37 +32,37 @@
 		"*": "prettier --ignore-unknown --write"
 	},
 	"devDependencies": {
-		"@eslint-community/eslint-plugin-eslint-comments": "4.4.1",
-		"@eslint/js": "9.24.0",
+		"@eslint-community/eslint-plugin-eslint-comments": "4.5.0",
+		"@eslint/js": "9.39.1",
 		"@types/eslint-plugin-markdown": "2.0.2",
-		"@types/node": "22.14.0",
-		"@vitest/coverage-v8": "3.1.3",
-		"@vitest/eslint-plugin": "1.1.44",
+		"@types/node": "24.10.1",
+		"@vitest/coverage-v8": "4.0.15",
+		"@vitest/eslint-plugin": "1.5.1",
 		"console-fail-test": "0.5.0",
-		"cspell": "8.18.1",
-		"eslint": "9.24.0",
-		"eslint-plugin-jsdoc": "50.6.9",
-		"eslint-plugin-jsonc": "2.20.0",
+		"cspell": "9.4.0",
+		"eslint": "9.39.1",
+		"eslint-plugin-jsdoc": "61.4.1",
+		"eslint-plugin-jsonc": "2.21.0",
 		"eslint-plugin-markdown": "5.1.0",
-		"eslint-plugin-package-json": "0.29.1",
-		"eslint-plugin-perfectionist": "4.11.0",
-		"eslint-plugin-regexp": "2.7.0",
-		"eslint-plugin-yml": "1.17.0",
+		"eslint-plugin-package-json": "0.85.0",
+		"eslint-plugin-perfectionist": "4.15.1",
+		"eslint-plugin-regexp": "2.10.0",
+		"eslint-plugin-yml": "1.19.0",
 		"husky": "9.1.7",
-		"jsonc-eslint-parser": "2.4.0",
-		"knip": "5.50.2",
-		"lint-staged": "15.5.0",
-		"markdownlint": "0.37.4",
-		"markdownlint-cli": "0.44.0",
-		"prettier": "3.5.3",
+		"jsonc-eslint-parser": "2.4.1",
+		"knip": "5.71.0",
+		"lint-staged": "16.2.7",
+		"markdownlint": "0.39.0",
+		"markdownlint-cli": "0.46.0",
+		"prettier": "3.7.3",
 		"prettier-plugin-astro": "0.14.1",
-		"prettier-plugin-curly": "0.3.2",
-		"prettier-plugin-packagejson": "2.5.10",
-		"prettier-plugin-sh": "0.17.2",
-		"sentences-per-line": "0.3.0",
-		"typescript": "5.8.3",
-		"typescript-eslint": "8.29.1",
-		"vitest": "3.1.3"
+		"prettier-plugin-curly": "0.4.1",
+		"prettier-plugin-packagejson": "2.5.20",
+		"prettier-plugin-sh": "0.18.0",
+		"sentences-per-line": "0.4.0",
+		"typescript": "5.9.3",
+		"typescript-eslint": "8.48.1",
+		"vitest": "4.0.15"
 	},
 	"engines": {
 		"node": ">=18.3.0"
