--- a/packages/bingo-fs/package.json
+++ b/packages/bingo-fs/package.json
@@ -16,16 +16,13 @@
 	"type": "module",
 	"main": "./lib/index.js",
 	"files": [
-		"lib/",
-		"package.json",
-		"LICENSE.md",
-		"README.md"
+		"lib/"
 	],
 	"scripts": {
 		"build": "tsc"
 	},
 	"devDependencies": {
-		"@types/node": "22.14.0"
+		"@types/node": "24.10.1"
 	},
 	"engines": {
 		"node": ">=18"
