--- a/packages/bingo-handlebars/package.json
+++ b/packages/bingo-handlebars/package.json
@@ -16,10 +16,7 @@
 	"type": "module",
 	"main": "./lib/index.js",
 	"files": [
-		"lib/",
-		"package.json",
-		"LICENSE.md",
-		"README.md"
+		"lib/"
 	],
 	"scripts": {
 		"build": "tsc"
@@ -27,11 +24,11 @@
 	"dependencies": {
 		"handlebars": "4.7.8"
 	},
+	"devDependencies": {
+		"bingo-fs": "workspace:^"
+	},
 	"peerDependencies": {
-		"bingo": "workspace:^",
-		"bingo-fs": "workspace:^",
-		"bingo-systems": "workspace:^",
-		"zod": "^3.24.2"
+		"bingo-fs": "workspace:^"
 	},
 	"engines": {
 		"node": ">=18"
