--- a/packages/bingo-requests/package.json
+++ b/packages/bingo-requests/package.json
@@ -16,16 +16,13 @@
 	"type": "module",
 	"main": "./lib/index.js",
 	"files": [
-		"lib/",
-		"package.json",
-		"LICENSE.md",
-		"README.md"
+		"lib/"
 	],
 	"scripts": {
 		"build": "tsc"
 	},
 	"dependencies": {
-		"@octokit/types": "^13.8.0"
+		"@octokit/types": "^16.0.0"
 	},
 	"engines": {
 		"node": ">=18"
