--- a/packages/bingo-stratum/package.json
+++ b/packages/bingo-stratum/package.json
@@ -16,10 +16,7 @@
 	"type": "module",
 	"main": "./lib/index.js",
 	"files": [
-		"lib/",
-		"package.json",
-		"LICENSE.md",
-		"README.md"
+		"lib/"
 	],
 	"scripts": {
 		"build": "tsc"
@@ -27,15 +24,18 @@
 	"dependencies": {
 		"all-properties-lazy": "^0.1.0",
 		"cached-factory": "^0.1.0",
-		"chalk": "^5.4.1",
+		"chalk": "^5.6.2",
 		"hash-object": "^5.0.1",
-		"octokit": "^4.1.2",
+		"octokit": "^5.0.5",
 		"slugify": "^1.6.6",
-		"without-undefined-properties": "^0.1.1"
+		"without-undefined-properties": "^0.1.2"
 	},
 	"devDependencies": {
-		"@types/node": "22.14.0",
-		"bingo": "workspace:^"
+		"@types/node": "24.10.1",
+		"bingo": "workspace:^",
+		"bingo-fs": "workspace:^",
+		"bingo-systems": "workspace:^",
+		"zod": "^3.24.2"
 	},
 	"peerDependencies": {
 		"bingo": "workspace:^",
