--- a/packages/input-from-file-json/package.json
+++ b/packages/input-from-file-json/package.json
@@ -16,10 +16,7 @@
 	"type": "module",
 	"main": "./lib/index.js",
 	"files": [
-		"lib/",
-		"package.json",
-		"LICENSE.md",
-		"README.md"
+		"lib/"
 	],
 	"scripts": {
 		"build": "tsc"
@@ -28,11 +25,11 @@
 		"input-from-file": "workspace:^"
 	},
 	"devDependencies": {
+		"bingo": "workspace:^",
 		"bingo-testers": "workspace:^"
 	},
 	"peerDependencies": {
-		"bingo": "workspace:^",
-		"zod": "^3.24.2"
+		"bingo": "workspace:^"
 	},
 	"engines": {
 		"node": ">=18"
