--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 		"format": "prettier .",
 		"lint": "eslint . --max-warnings 0",
 		"lint:knip": "knip",
-		"lint:md": "markdownlint \"**/*.md\" \".github/**/*.md\" --rules sentences-per-line",
+		"lint:md": "markdownlint \"**/*.md\" \".github/**/*.md\"",
 		"lint:packages": "pnpm dedupe --check",
 		"lint:spelling": "cspell \"**\" \".github/**/*\"",
 		"prepare": "husky",
@@ -58,8 +58,8 @@
 		"prettier-plugin-astro": "0.14.1",
 		"prettier-plugin-curly": "0.4.1",
 		"prettier-plugin-packagejson": "2.5.20",
+		"prettier-plugin-sentences-per-line": "^0.1.0",
 		"prettier-plugin-sh": "0.18.0",
-		"sentences-per-line": "0.4.0",
 		"typescript": "5.9.3",
 		"typescript-eslint": "8.48.1",
 		"vitest": "4.0.15"
